<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".Mobile_register">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@drawable/logo_telkomschool"
            android:layout_alignParentTop="true" android:id="@+id/login_page_logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/login_page_title" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/mobile_register_title"
            android:textColor="@color/colorTelkom"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:layout_below="@+id/login_page_logo" android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/login_page_logo"/>
    <EditText
            android:drawableLeft="@drawable/ic_action_username"
            android:textColor="@color/colorBlack"
            android:background="@drawable/border_text"
            android:contentDescription="@string/descUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/mobilephone_register"
            android:layout_below="@+id/page_title"
            android:hint="@string/login_page_username"
            android:textColorHint="@color/colorGray"
            android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/page_title"/>
    <EditText
            android:drawableLeft="@drawable/ic_action_phone"
            android:textColor="@color/colorBlack"
            android:background="@drawable/border_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/email_register"
            android:layout_below="@+id/page_title"
            android:hint="@string/phone_register"
            android:textColorHint="@color/colorGray"
            android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/mobilephone_register"/>
    <Button
            android:background="@drawable/designed_button"
            android:hint="@string/phone_register_button"
            android:textColorHint="#ffffff"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:id="@+id/register_phone_submit"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="172dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_register"/>
    <TextView
            android:text="Sudah Daftar Ponsel ?"
            android:textSize="12sp"
            android:textColor="@color/colorTelkom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_desc" android:layout_marginStart="116dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="116dp" android:layout_marginBottom="88dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_submit"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="Cek Disini"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_here_desc" android:layout_marginEnd="124dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="124dp"
            android:layout_marginBottom="88dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_submit"
            app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>