<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".Login">

    <ImageView
            android:layout_width="163dp"
            android:layout_height="161dp" app:srcCompat="@drawable/logo_telkomschool"
            android:layout_alignParentTop="true" android:id="@+id/login_page_logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/login_page_title" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="LOGIN"
            android:textColor="@color/colorTelkom"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:layout_below="@+id/login_page_logo" android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/login_page_logo"/>
    <EditText
            android:drawableLeft="@drawable/ic_action_email"
            android:textColor="@color/colorBlack"
            android:background="@drawable/border_text"
            android:contentDescription="@string/descUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/Email"
            android:layout_below="@+id/page_title"
            android:hint="@string/register_page_email"
            android:textColorHint="@color/colorGray"
            android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/page_title"/>
    <EditText
            android:drawableLeft="@drawable/ic_action_password"
            android:textColor="@color/colorBlack"
            android:background="@drawable/border_text"
            android:contentDescription="@string/descPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login"
            android:textColorHint="@color/colorGray"
            android:layout_below="@+id/Email"
            android:layout_centerHorizontal="true" android:hint="@string/login_page_password"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/Email" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:background="@drawable/designed_button"
            android:textColor="@color/colorBlack"
            android:hint="LOGIN"
            android:textColorHint="#ffffff"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:id="@+id/login_guru"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_below="@+id/password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.483" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password_login" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.124"/>

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="106dp"
        android:layout_height="17dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="124dp"
        android:text="Tidak punya Akun ?"
        android:textColor="@color/colorTelkom"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/login_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_guru" />

    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="126dp"
        android:text="Register Disini"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_desc"
        app:layout_constraintTop_toBottomOf="@+id/login_guru" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="16dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="8dp"
        android:text="Cek nomor Ponsel ?"
        android:textColor="@color/colorTelkom"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/phone_check_button"
        android:layout_width="67dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="48dp"
        android:text="Klik Disini"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/login_here" />
</androidx.constraintlayout.widget.ConstraintLayout>