<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".Mobile_Check">

    <TextView
            android:text="@string/mobile_check_title"
            android:textColor="@color/colorTelkom"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:layout_below="@+id/login_page_logo" android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="144dp" app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:drawableLeft="@drawable/ic_action_phone"
            android:textColor="@color/colorBlack"
            android:background="@drawable/border_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/email_register"
            android:layout_below="@+id/page_title"
            android:hint="@string/phone_check"
            android:textColorHint="@color/colorGray"
            android:layout_centerHorizontal="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/page_title"/>
    <Button
            android:background="@drawable/designed_button"
            android:hint="@string/phone_check_button"
            android:textColorHint="#ffffff"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:id="@+id/phone_check_submit"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="172dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_register"
            app:layout_constraintVertical_bias="0.135"/>
    <TextView
            android:text="Login dengan Akun ?"
            android:textSize="12sp"
            android:textColor="@color/colorTelkom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_check_desc" android:layout_marginStart="116dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="116dp" android:layout_marginBottom="88dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_submit"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="Klik Disini"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_here_check_desc" android:layout_marginEnd="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="124dp"
            android:layout_marginBottom="88dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_submit"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:visibility="invisible"
            android:text="DATA TIDAK DITEMUKAN !"
            android:textSize="24sp"
            android:textColor="@color/colorTelkom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/phonecheck_answer_no" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_check_submit"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="216dp"
            android:layout_height="212dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_check_submit" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.049"
            android:id="@+id/phonecheck_answer">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/phonecheck_answer_box">

            <TextView

                    android:text="DATA DITEMUKAN !"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorTelkom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/phonecheck_answer_title"/>

            <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer_data"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/phonecheck_answer_title" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>